Fix T52334: images with non-color data should not change color space on save.